--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.26",
@@ -20,10 +21,13 @@
   },
   "dependencies": {
     "@prisma/client": "5.11.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "http-status": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^4.0.17"
   }
 }
