--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.26",
+    "@types/nodemailer": "^7.0.1",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -29,6 +30,7 @@
     "express": "^4.18.3",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "zod": "^4.0.17"
   }
 }
