--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^4.18.3",
     "http-status": "^2.1.0",
